--- a/code/package.json
+++ b/code/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2",
-    "webworker-threads": "^0.7.13"
+    "express": "^4.16.2"
   }
 }
